Implement Fieldset Generation and Hotwire Turbo for `ScopeController`
# Conflicts:
#	src/main/java/pragmasoft/k1teauth/oauth/scope/form/AddScopeForm.java